# cms-migrate

./: .env.template  .gitignore  README.md  ai_classifier.py  component_patterns.py  database.py  demo.py  enhanced_content_detection.py  html_parser.py  main.py  migration_system.py  models.py  pyproject.toml  requirements.txt  schema_creator.py  scraper.py  smart_parser.py
